--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
-
 {
-  "name": "sales-assistant",
-  "version": "0.1.0",
-  "private": true,
+  "name": "iaarg-app-router",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "next": "14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
   }
 }
