--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "sales-assistant",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+  "name": "assistente de vendas",
+  "versão": "1.0.0",
+  "roteiros": {
+    "desenvolvedor": "próximo desenvolvimento",
+    "construir": "próxima construção",
+    "começar": "próximo começo"
   },
-  "dependencies": {
-    "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+  "dependências": {
+    "próximo": "14.1.0",
+    "reagir": "18.2.0",
+    "reação-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "datilografado": "^5.0.0"
   }
 }
-Renomear pasta de aplicativo para app
