--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "assistente de vendas",
-  "versão": "1.0.0",
-  "roteiros": {
-    "desenvolvedor": "próximo desenvolvimento",
-    "construir": "próxima construção",
-    "começar": "próximo começo"
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "dependências": {
-    "próximo": "14.1.0",
-    "reagir": "18.2.0",
-    "reação-dom": "18.2.0"
+  "dependencies": {
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-  "typescript": "^5.0.0"
-
+    "typescript": "^5.0.0"
   }
 }
