--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assistente de vendas",
+  "name": "assistente-de-vendas",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
