--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assistente-de-vendas",
+  "name": "sales-assistant",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -9,8 +9,7 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-speech-recognition": "^3.10.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "typescript": "^5.0.0"
