--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "next": "14.1.0",
+    "next-auth": "^4.24.11",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^24.2.1",
     "typescript": "^5.0.0"
   }
 }
