--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "credentials": "link:next-auth/providers/credentials",
+    "github": "link:next-auth/providers/github",
+    "google": "link:next-auth/providers/google",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
     "react": "18.2.0",
