--- a/package.json
+++ b/package.json
@@ -7,16 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "credentials": "link:next-auth/providers/credentials",
-    "github": "link:next-auth/providers/github",
-    "google": "link:next-auth/providers/google",
     "next": "14.1.0",
-    "next-auth": "^4.24.11",
+    "next-auth": "4.24.11",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^24.2.1",
-    "typescript": "^5.0.0"
+    "@types/node": "20.1.0",
+    "typescript": "5.0.0"
   }
 }
