--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "20.1.0",
+    "@types/node": "^20.1.0",
+    "@types/react": "^19.1.10",
     "typescript": "^5.0.2"
   }
 }
