--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20.1.0",
     "@types/react": "^19.1.10",
     "autoprefixer": "^10.4.21",
