--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "20.1.0",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^4.1.12",
     "typescript": "5.0.2"
   }
 }
