--- a/package.json
+++ b/package.json
@@ -1,24 +1,8 @@
 {
-  "name": "sales-assistant",
+  "name": "iaarg-website",
   "version": "1.0.0",
+  "description": "Site IAARG - Inteligência Artificial Avançada",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "14.1.0",
-    "next-auth": "4.24.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "20.1.0",
-    "@types/react": "19.1.12",
-    "autoprefixer": "10.4.21",
-    "postcss": "8.5.6",
-    "tailwindcss": "3.4.0",
-    "typescript": "5.0.2"
+    "build": "echo 'No build needed for static site'"
   }
 }
