--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'  # Alterado para npm
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm install  # Alterado para npm
+        run: npm install
 
       - name: Build with Next.js
-        run: npm run build  # Alterado para npm
+        run: npm run build
+
+      - name: List files after build (DEBUG)  # PASSO NOVO PARA DEBUG
+        run: ls -la
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
