--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
   "version": "1.0.0",
   "description": "Site IAARG - Inteligência Artificial Avançada",
   "scripts": {
-    "build": "echo 'No build needed for static site'"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export"
+  },
+  "dependencies": {
+    "next": "14.0.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.0.0",
+    "@types/react": "18.0.0",
+    "@types/react-dom": "18.0.0",
+    "typescript": "5.0.0"
   }
 }
